SERVER-42842 Unable to drop collection in admin database of sharded cluster

(cherry picked from commit 02dbec04bad4a6b138a204a29644a0524e5c3123)